# depthai_vcpkg_example

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: FOV.xlsx  VSCODE  auto_st.py  autostart  ball.csv  ball.py  ball_log.py  ball_log2.py  base.cpp  base2.cpp  bat.json  calib_19443010B1532D1200.json  camera9.py  camera_capture  camera_capture.cpp  camera_double.py  config.txt  focal_length.py  fov.txt  gitコマンド  human.cpp  main.cpp  main.cpp.bak  main2.cpp  main3.cpp  main_test.cpp  man  mono_focus.py  myapp copy.sh  myapp.desktop  myapp.sh  oak-d.cal  obicheck.py  play_sound.py  pose.cpp  pose.py  pose_cpp.py  posec.py  posecopy.py  pulseaudio.sh  (+17 more)
